{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 190,
  "lineage": "2777f77e-b403-becf-3a13-1aa44df826be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027793e092bc156fd",
            "arn": "arn:aws:ec2:us-east-1:285654864320:elastic-ip/eipalloc-027793e092bc156fd",
            "domain": "vpc",
            "id": "eipalloc-027793e092bc156fd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-226-16-250.compute-1.amazonaws.com",
            "public_ip": "34.226.16.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-eip-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-eip-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0730690fedcc93175",
            "arn": "arn:aws:ec2:us-east-1:285654864320:elastic-ip/eipalloc-0730690fedcc93175",
            "domain": "vpc",
            "id": "eipalloc-0730690fedcc93175",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-253-201.compute-1.amazonaws.com",
            "public_ip": "3.228.253.201",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-eip-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-eip-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:internet-gateway/igw-0604f930650707612",
            "id": "igw-0604f930650707612",
            "owner_id": "285654864320",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-igw",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-igw",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027793e092bc156fd",
            "association_id": "eipassoc-07e6a6dce24e9a91a",
            "connectivity_type": "public",
            "id": "nat-01dac2fab59fef9d7",
            "network_interface_id": "eni-029efb405a0655d76",
            "private_ip": "10.0.101.135",
            "public_ip": "34.226.16.250",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-096982b4034e0d014",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-gateway-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-gateway-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0730690fedcc93175",
            "association_id": "eipassoc-033fce1bf065cc104",
            "connectivity_type": "public",
            "id": "nat-01cd43bba514bc9b7",
            "network_interface_id": "eni-0a05bda233f9edeef",
            "private_ip": "10.0.102.247",
            "public_ip": "3.228.253.201",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016ba54ce072d0072",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-gateway-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-nat-gateway-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:route-table/rtb-0b0cbf34e406ffcc6",
            "id": "rtb-0b0cbf34e406ffcc6",
            "owner_id": "285654864320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01dac2fab59fef9d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-rt-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-rt-1",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:route-table/rtb-0dc5c82e361a48130",
            "id": "rtb-0dc5c82e361a48130",
            "owner_id": "285654864320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cd43bba514bc9b7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-rt-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-rt-2",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:route-table/rtb-0eba59f1cd6ccb5ca",
            "id": "rtb-0eba59f1cd6ccb5ca",
            "owner_id": "285654864320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0604f930650707612",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-rt",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-rt",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e3e51df9dc4453a",
            "route_table_id": "rtb-0b0cbf34e406ffcc6",
            "subnet_id": "subnet-081be426164219496"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074c4d390a686f25b",
            "route_table_id": "rtb-0dc5c82e361a48130",
            "subnet_id": "subnet-00b2fa17dff0902d1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9b58183a18ac7ef",
            "route_table_id": "rtb-0eba59f1cd6ccb5ca",
            "subnet_id": "subnet-096982b4034e0d014"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef7cead919b94c85",
            "route_table_id": "rtb-0eba59f1cd6ccb5ca",
            "subnet_id": "subnet-016ba54ce072d0072"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-0f3b002d75ce9e00f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3b002d75ce9e00f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "orderflow-cluster-20251004020855613600000004",
            "name_prefix": "orderflow-cluster-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-cluster-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-cluster-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-0a03a75da1a74481f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a03a75da1a74481f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node group",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3b002d75ce9e00f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3b002d75ce9e00f"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f3b002d75ce9e00f"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "orderflow-node-group-20251004020905639700000006",
            "name_prefix": "orderflow-node-group-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-node-group-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-node-group-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-05bd44bb921cfc322",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bd44bb921cfc322",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a03a75da1a74481f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "orderflow-rds-20251004020909468700000009",
            "name_prefix": "orderflow-rds-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-rds-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-rds-sg",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.node_group",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:subnet/subnet-081be426164219496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081be426164219496",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285654864320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-subnet-1",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-subnet-1",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:subnet/subnet-00b2fa17dff0902d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b2fa17dff0902d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "285654864320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-subnet-2",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-private-subnet-2",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:subnet/subnet-096982b4034e0d014",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096982b4034e0d014",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "285654864320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-subnet-1",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-subnet-1",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:subnet/subnet-016ba54ce072d0072",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ba54ce072d0072",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "285654864320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-subnet-2",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-public-subnet-2",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:vpc/vpc-02b8478b6b14790e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03839a6d82f7bf3a5",
            "default_route_table_id": "rtb-05849c35875852608",
            "default_security_group_id": "sg-0ecc30942143a3897",
            "dhcp_options_id": "dopt-0d424eca63c1e271e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b8478b6b14790e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05849c35875852608",
            "owner_id": "285654864320",
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-vpc",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-vpc",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "shared"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-0d319671286766856",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0d319671286766856",
            "ingress": [],
            "name": "orderflow-dev-cluster-20251004020855611900000001",
            "name_prefix": "orderflow-dev-cluster-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-dev-cluster",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-dev-cluster",
              "Owner": "Student",
              "Project": "OrderFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-0830149cb4c5eb56b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0830149cb4c5eb56b",
            "ingress": [],
            "name": "orderflow-dev-node-20251004020855612100000003",
            "name_prefix": "orderflow-dev-node-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-dev-node",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-dev-node",
              "Owner": "Student",
              "Project": "OrderFlow",
              "kubernetes.io/cluster/orderflow-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1545820304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d319671286766856",
            "security_group_rule_id": "sgr-02b3d4a26102cd73a",
            "self": false,
            "source_security_group_id": "sg-0830149cb4c5eb56b",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_ephemeral_ports_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "To node 1025-65535",
            "from_port": 1025,
            "id": "sgrule-1610166691",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d319671286766856",
            "security_group_rule_id": "sgr-07d2990b51c6ea54a",
            "self": false,
            "source_security_group_id": "sg-0830149cb4c5eb56b",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2004641145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d319671286766856",
            "security_group_rule_id": "sgr-024a36296e4c655e3",
            "self": false,
            "source_security_group_id": "sg-0830149cb4c5eb56b",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-887837430",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d319671286766856",
            "security_group_rule_id": "sgr-0f1038f4aec4816e0",
            "self": false,
            "source_security_group_id": "sg-0830149cb4c5eb56b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-3236026408",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1066095987",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-019662f1c257356f0",
            "self": false,
            "source_security_group_id": "sg-0d319671286766856",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-1921950449",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-034271d776340b1be",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-2907742191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-002661dd57a688adc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-3553540834",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-0aa438c397448bbf5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-548983911",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-03ade83f5e16284a1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2933872129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-048f81fc379bad1e1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2274408348",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-02a9d6d0454ebf841",
            "self": false,
            "source_security_group_id": "sg-0d319671286766856",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4072023422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-087d6cb994eb8d845",
            "self": false,
            "source_security_group_id": "sg-0d319671286766856",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-480607402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-00bcf55eae3f1e309",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-391032517",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-02d3583909fc9c541",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3004239146",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0830149cb4c5eb56b",
            "security_group_rule_id": "sgr-070782273594d7d40",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"main\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285654864320:security-group/sg-0e555f1224c674dbc",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-0e555f1224c674dbc",
            "ingress": [],
            "name": "orderflow-node-group-eks-node-group-20251004020855612000000002",
            "name_prefix": "orderflow-node-group-eks-node-group-",
            "owner_id": "285654864320",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-node-group-eks-node-group",
              "Owner": "Student",
              "Project": "OrderFlow",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "k8s.io/cluster-autoscaler/orderflow-dev": "owned"
            },
            "tags_all": {
              "Environment": "Academy",
              "ManagedBy": "Terraform",
              "Name": "orderflow-node-group-eks-node-group",
              "Owner": "Student",
              "Project": "OrderFlow",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "k8s.io/cluster-autoscaler/orderflow-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b8478b6b14790e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_iam_role.node_group"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}